--- a/openshift/monitoring/prometheus.yaml
+++ b/openshift/monitoring/prometheus.yaml
@@ -2,6 +2,7 @@ apiVersion: template.openshift.io/v1
 kind: Template
 labels:
   template: prometheus-template
+  app.kubernetes.io/part-of: monitoring
 metadata:
   annotations:
   name: prometheus-template
@@ -11,7 +12,7 @@ parameters:
     value: wally-staging-prometheus
   - name: SCRAPE_NAMESPACE
     required: true
-    value: bfpeyx-test
+    value: d1b5d2-test
 objects:
   - apiVersion: v1
     kind: ConfigMap
@@ -113,8 +114,8 @@ objects:
         app: ${PROMETHEUS_SERVICE_NAME}
         release: ${PROMETHEUS_SERVICE_NAME}
       type: "ClusterIP"
-  - apiVersion: extensions/v1beta1
-    kind: Deployment
+  - apiVersion: apps.openshift.io/v1
+    kind: DeploymentConfig
     metadata:
       labels:
           component: ${PROMETHEUS_SERVICE_NAME}
@@ -125,10 +126,9 @@ objects:
       name: ${PROMETHEUS_SERVICE_NAME}
     spec:
       selector:
-        matchLabels:
-          component: ${PROMETHEUS_SERVICE_NAME}
-          app: ${PROMETHEUS_SERVICE_NAME}
-          release: ${PROMETHEUS_SERVICE_NAME}
+        component: ${PROMETHEUS_SERVICE_NAME}
+        app: ${PROMETHEUS_SERVICE_NAME}
+        release: ${PROMETHEUS_SERVICE_NAME}
       replicas: 1
       template:
         metadata:
@@ -142,7 +142,7 @@ objects:
           serviceAccountName: default
           containers:
             - name: ${PROMETHEUS_SERVICE_NAME}-configmap-reload
-              image: "jimmidyson/configmap-reload:v0.2.2"
+              image: "image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/configmap-reload:v0.5.0"
               imagePullPolicy: "IfNotPresent"
               args:
                 - --volume-dir=/etc/config
@@ -156,7 +156,7 @@ objects:
                   readOnly: true
 
             - name: ${PROMETHEUS_SERVICE_NAME}
-              image: "prom/prometheus:v2.11.1"
+              image: "image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/prometheus:v2.28.0"
               imagePullPolicy: "IfNotPresent"
               args:
                 - --config.file=/etc/config/prometheus.yml
@@ -208,7 +208,7 @@ objects:
   #       template: prometheus-template
   #     name: ${PROMETHEUS_SERVICE_NAME}
   #   spec:
-  #     host: ${PROMETHEUS_SERVICE_NAME}.pathfinder.gov.bc.ca
+  #     host: ${PROMETHEUS_SERVICE_NAME}.apps.silver.devops.gov.bc.ca
   #     tls:
   #       termination: edge
   #     port:
