--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -2,11 +2,11 @@ ARG DOCKER_TAG=latest
 
 FROM rust:latest AS builder
 
-
 RUN apt-get update && apt-get install -y musl-tools git && \
   rustup target add x86_64-unknown-linux-musl && \
-  git clone https://github.com/mholling/whitebox-tools.git /wbt && \
-  cd /wbt && git checkout d8_flow_accum-fix
+  git clone https://github.com/mholling/whitebox-tools.git /wbt
+  # NOTE: this branch no longer exists
+  # && cd /wbt && git checkout d8_flow_accum-fix
 
 WORKDIR /wbt
 
@@ -19,8 +19,10 @@ COPY --from=builder /wbt/target/x86_64-unknown-linux-musl/release/whitebox_tools
 WORKDIR /app/
 
 RUN useradd wally -M -G root -u 1021 && chmod -R 775 /app \
-  && chown -R wally:root /app \ 
+  && chown -R wally:root /app \
   && apt-get update && apt-get -y install ca-certificates libgdal-dev gdal-bin
+
+RUN pip install pygdal=="`gdal-config --version`.*"
 
 COPY ./requirements.txt /
 
