Create config to build app on Apple M1 computer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.dev
+      dockerfile: "Dockerfile.dev${PLATFORM}"
       args:
         env: dev
     networks:
