--- a/backend/Dockerfile.dev.m1
+++ b/backend/Dockerfile.dev.m1
@@ -1,6 +1,6 @@
 ARG DOCKER_TAG=latest
 
-FROM rust:latest AS builder
+FROM --platform=linux/amd64 rust:latest AS builder
 
 RUN apt-get update && apt-get install -y musl-tools git && \
   rustup target add x86_64-unknown-linux-musl && \
@@ -10,11 +10,11 @@ RUN apt-get update && apt-get install -y musl-tools git && \
 
 WORKDIR /wbt
 
-RUN cargo build --release --target x86_64-unknown-linux-musl
+RUN cargo build --release 
 
-FROM python:3.7
+FROM --platform=linux/amd64 python:3.7
 
-COPY --from=builder /wbt/target/x86_64-unknown-linux-musl/release/whitebox_tools /usr/local/bin/
+COPY --from=builder /wbt/target/release/whitebox_tools /usr/local/bin/
 
 WORKDIR /app/
 
