Node 10 with verbose output
Rebuilding on node 10 with verbose enabled

--- a/frontend/Dockerfile.ocp4
+++ b/frontend/Dockerfile.ocp4
@@ -1,10 +1,10 @@
-FROM image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/node:15 as build
+FROM image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/node10:10 as build
 
 WORKDIR /app
 
 COPY package*.json /app/
 
-RUN npm ci
+RUN npm ci --verbose
 
 COPY . .
 
