--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -5,6 +5,6 @@ VUE_APP_ENV = 'dev'
 VUE_APP_MAP_CENTER=[-122.96, 50.12]
 VUE_APP_MAP_ZOOM_LEVEL=12.7
 
-#VUE_APP_KC_AUTH_URL = "https://dev.loginproxy.gov.bc.ca/auth"
-#VUE_APP_KC_REALM = "standard"
-#VUE_APP_KC_CLIENT = "wally-4389"
+VUE_APP_KC_AUTH_URL = "https://dev.loginproxy.gov.bc.ca/auth"
+VUE_APP_KC_REALM = "standard"
+VUE_APP_KC_CLIENT = "wally-4389"
