--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,6 +1,6 @@
 VUE_APP_AXIOS_BASE_URL = ''
 VUE_APP_ENV = 'production'
 
-VUE_APP_KC_AUTH_URL = "https://dev.loginproxy.gov.bc.ca/auth"
-VUE_APP_KC_REALM = "standard"
-VUE_APP_KC_CLIENT = "wally-4389"
+#VUE_APP_KC_AUTH_URL = "https://loginproxy.gov.bc.ca/auth"
+#VUE_APP_KC_REALM = "standard"
+#VUE_APP_KC_CLIENT = "wally-4389"
