--- a/backend/Dockerfile.dev.m1
+++ b/backend/Dockerfile.dev.m1
@@ -1,8 +1,9 @@
 ARG DOCKER_TAG=latest
 
-FROM --platform=linux/amd64 rust:latest AS builder
+FROM --platform=linux/amd64 rust:1.67.1 AS builder
+# FROM --platform=linux/amd64 rust:latest AS builder
 
-RUN apt-get update && apt-get install -y musl-tools git && \
+RUN apt-get update && apt-get install -y musl-tools librust-atk-dev libgtk-3-dev git && \
   rustup target add x86_64-unknown-linux-musl && \
   git clone https://github.com/mholling/whitebox-tools.git /wbt
   # NOTE: this branch no longer exists
@@ -10,6 +11,7 @@ RUN apt-get update && apt-get install -y musl-tools git && \
 
 WORKDIR /wbt
 
+RUN cargo clean
 RUN cargo build --release 
 
 FROM --platform=linux/amd64 python:3.7
