--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       MINIO_ACCESS_KEY: "${MINIO_ACCESS_KEY:-minio}" # default to the minio service defined below.
       MINIO_SECRET_KEY: "${MINIO_SECRET_KEY:-minio123}" 
       MINIO_HOST_URL: "${MINIO_HOST_URL:-minio:9000}"
-      GDAL_DATA: /usr/share/gdal/
+      # GDAL_DATA: /usr/share/gdal/
     ports:
       - '8000:8000'
     depends_on:
