660 - Docker and CDOGS update (#711)
* update docker to build images using m1

* remove gdal_data variable, now works locally

* update how we request cdogs access token

* Build Bump

Rebuild as David is not an authorized user.

* Build Bump

Rebuilding dev env

* reissue token in headers, fix to watershed error

* Revert Previous change

Api tests are failing. Reverting changes to debug situation.

* Token update

Reverted these changes due to failing api tests.

Possibly an issue on openshift. Adding changes back now that changes have been made to the namespace.

---------

Co-authored-by: Christopher-walsh22 <106549296+Christopher-walsh22@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.3'
 services:
   backend:
+    platform: linux/amd64
     build:
       context: ./backend
       dockerfile: "Dockerfile.dev${PLATFORM}"
@@ -30,12 +31,13 @@ services:
       MINIO_ACCESS_KEY: "${MINIO_ACCESS_KEY:-minio}" # default to the minio service defined below.
       MINIO_SECRET_KEY: "${MINIO_SECRET_KEY:-minio123}" 
       MINIO_HOST_URL: "${MINIO_HOST_URL:-minio:9000}"
-      GDAL_DATA: /usr/share/gdal/
+      # GDAL_DATA: /usr/share/gdal/
     ports:
       - '8000:8000'
     depends_on:
       - db
   db:
+    platform: linux/amd64
     build: database
     env_file:
       - env-postgres.env
@@ -52,6 +54,7 @@ services:
     ports:
       - '5432:5432'
   tileserv:
+    platform: linux/amd64
     hostname: tileserv
     depends_on:
       - db
