--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,15 @@ services:
     env_file:
       - env-postgres.env
       - env-backend.env
+      - backend/.config/dev.env
     environment:
       PORT: 8000
-      MAPBOX_ACCESS_TOKEN: "${MAPBOX_ACCESS_TOKEN}"
-      MAPBOX_STYLE: "${MAPBOX_STYLE}"
-      COMMON_DOCGEN_CLIENT_ID: "${COMMON_DOCGEN_CLIENT_ID}"
-      COMMON_DOCGEN_CLIENT_SECRET: "${COMMON_DOCGEN_CLIENT_SECRET}"
-      COMMON_DOCGEN_SSO_ENDPOINT: "${COMMON_DOCGEN_SSO_ENDPOINT}"
-      COMMON_DOCGEN_ENDPOINT: "${COMMON_DOCGEN_ENDPOINT}"
+      # MAPBOX_ACCESS_TOKEN: "${MAPBOX_ACCESS_TOKEN}"
+      # MAPBOX_STYLE: "${MAPBOX_STYLE}"
+      # COMMON_DOCGEN_CLIENT_ID: "${COMMON_DOCGEN_CLIENT_ID}"
+      # COMMON_DOCGEN_CLIENT_SECRET: "${COMMON_DOCGEN_CLIENT_SECRET}"
+      # COMMON_DOCGEN_SSO_ENDPOINT: "${COMMON_DOCGEN_SSO_ENDPOINT}"
+      # COMMON_DOCGEN_ENDPOINT: "${COMMON_DOCGEN_ENDPOINT}"
       MINIO_ACCESS_KEY: "${MINIO_ACCESS_KEY:-minio}" # default to the minio service defined below.
       MINIO_SECRET_KEY: "${MINIO_SECRET_KEY:-minio123}" 
       MINIO_HOST_URL: "${MINIO_HOST_URL:-minio:9000}"
