--- a/frontend/package.json
+++ b/frontend/package.json
@@ -84,6 +84,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.6.0",
     "webpack": "^5.27.0",
