--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "@bcgov/bc-sans": "^1.0.1",
     "@mapbox/mapbox-gl-draw": "^1.3.0",
-    "@mapbox/mapbox-gl-geocoder": "^4.7.1",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.4",
     "@mdi/font": "^5.9.55",
-    "@sentry/browser": "^6.7.1",
-    "@sentry/integrations": "^6.7.0",
+    "@sentry/browser": "^6.7.2",
+    "@sentry/integrations": "^6.7.2",
     "@tmcw/togeojson": "^4.4.1",
     "@turf/area": "^6.0.1",
     "@turf/bbox": "^6.0.1",
@@ -31,13 +31,13 @@
     "@turf/length": "^6.0.2",
     "@turf/line-to-polygon": "^6.0.1",
     "@turf/union": "^6.0.3",
-    "acorn": "^8.0.5",
-    "axios": "^0.21.1",
-    "csv2geojson": "^5.1.1",
-    "file-saver": "^2.0.2",
-    "html2canvas": "^1.0.0-rc.5",
+    "acorn": "^8.14.1",
+    "axios": "^0.21.4",
+    "csv2geojson": "^5.1.2",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
-    "keycloak-js": "^24.0.0",
+    "keycloak-js": "^24.0.5",
     "leaflet": "^1.5.1",
     "lodash.debounce": "^4.0.8",
     "lodash.unionby": "^4.8.0",
@@ -48,46 +48,49 @@
     "proj4": "^2.6.3",
     "querystring-es3": "^0.2.1",
     "shapefile": "^0.6.6",
-    "vue": "^2.6.10",
-    "vue-matomo": "^3.13.4-1",
+    "vue": "^2.6.14",
+    "vue-matomo": "^3.13.5-0",
     "vue-plotly": "^1.0.1",
-    "vue-router": "^3.0.3",
-    "vuetify": "^2.4.2",
+    "vue-router": "^3.0.7",
+    "vuetify": "^2.4.11",
     "vuex": "^3.0.1",
-    "xlsx": "^0.16.7"
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.17.12",
     "@babel/eslint-parser": "^7.26.10",
     "@storybook/addon-actions": "^8.6.4",
     "@storybook/addon-essentials": "^8.6.4",
     "@storybook/addon-links": "^8.6.4",
     "@storybook/vue": "^7.6.17",
-    "@vue/babel-preset-app": "^5.0.8",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vue/cli-plugin-unit-jest": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
+    "@types/jest": "27.4.1",
+    "@vue/babel-preset-app": "5.0.8",
+    "@vue/cli-plugin-babel": "5.0.8",
+    "@vue/cli-plugin-eslint": "5.0.8",
+    "@vue/cli-plugin-unit-jest": "5.0.8",
+    "@vue/cli-service": "5.0.8",
     "@vue/eslint-config-standard": "^7.0.0",
-    "@vue/test-utils": "^1.0.0-beta.30",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
-    "compression-webpack-plugin": "^6.1.1",
+    "@vue/test-utils": "^1.0.0-beta.33",
+    "@vue/vue2-jest": "^27.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "27.5.1",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-dynamic-import-node-babel-7": "^2.0.7",
+    "compression-webpack-plugin": "^6.1.2",
     "core-js": "^3.7.0",
     "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^8.0.0",
+    "eslint-plugin-vue": "^8.0.3",
     "eslint-webpack-plugin": "^3.2.0",
+    "jest": "^27.0.6",
     "jest-canvas-mock": "^2.2.0",
     "sass": "^1.18.0",
     "sass-loader": "^8.0.2",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-jest": "^3.0.7",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.6.0",
-    "webpack": "^5.27.0",
+    "webpack": "^5.27.2",
     "webpack-visualizer-plugin": "^0.1.11"
   }
 }
