Update docker files

--- a/frontend/Dockerfile.ocp4
+++ b/frontend/Dockerfile.ocp4
@@ -1,4 +1,4 @@
-FROM image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/node:10.2 as build
+FROM node:22-alpine as build
 
 WORKDIR /app
 
