--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,12 +46,13 @@
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
+    "plotly.js": "^2.5.1",
     "proj4": "^2.6.3",
     "querystring-es3": "^0.2.1",
     "shapefile": "^0.6.6",
     "vue": "^2.6.14",
     "vue-matomo": "^3.13.5-0",
-    "vue-plotly": "^1.0.1",
+    "vue-plotly": "^1.1.0",
     "vue-router": "^3.0.7",
     "vuetify": "^2.4.11",
     "vuex": "^3.0.1",
