--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,7 @@
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
-    "plotly.js": "^2.5.1",
+    "plotly.js": "2.3.0",
     "proj4": "^2.6.3",
     "querystring-es3": "^0.2.1",
     "shapefile": "^0.6.6",
